# Werd

./: .gitignore  README.md  pyproject.toml  werd_PRD_full_with_CLI.md
fixtures/: echo.wat
scripts/: bootstrap_py311.sh  diagnose_wasmtime.py
src/werd/: __init__.py  _executor.py  cli.py  errors.py  inspect.py  loader.py  runtime.py  sandbox.py
tests/: test_cli_inspect.py  test_cli_run.py  test_runtime.py  test_sandbox.py
